con multiple players, no ha sido buena idea, mañana cambiamos

--- a/juego/index.html
+++ b/juego/index.html
@@ -32,6 +32,7 @@
         <a href="srcHtml/1vsIA.html">1 VS IA</a>
         <br>
         <a href="srcHtml/tournament.html">Torneo</a>
+        <a href="srcHtml/multiple.html">Multiple players</a>
         
         <br><footer><p>Las Supernenas - 2025</p></footer>
     </body>
