2vs2 done (posible changes: ball random angle retet / evade angles -10º to 10º ...)

--- a/juego/index.html
+++ b/juego/index.html
@@ -30,9 +30,10 @@
         <!-- <audio autoplay loop src="Bonnie_Tyler_Hero.mp3"></audio> -->  <!--TODO: Esto es muy importante!!-->
         <a href="srcHtml/1vs1.html">1 VS 1</a>
         <a href="srcHtml/1vsIA.html">1 VS IA</a>
+        <a href="srcHtml/2vs2.html">2 VS 2</a>
         <br>
         <a href="srcHtml/tournament.html">Torneo</a>
-        <a href="srcHtml/multiple.html">Multiple players</a>
+        
         
         <br><footer><p>Las Supernenas - 2025</p></footer>
     </body>
