--- a/juego/srcHtml/tron.html
+++ b/juego/srcHtml/tron.html
@@ -60,8 +60,8 @@
 		</style>
 	</head>
 	<body>
-		<h1>Pong - 1 VS 1</h1>
-		<canvas id="gameCanvas" width="700" height="400"></canvas>
-		<script src="../srcJS/1vs1.js"></script>
+		<h1>TRON</h1>
+		<canvas id="tronCanvas" width="700" height="400"></canvas>
+		<script src="../srcJS/tron.js"></script>
 	</body>
 </html>
